--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ input{
 
 .container-botones{
     margin: 20px;
+    margin-right: 30px;
     height: 100%;
     border-radius: 50px;
     background: #d6d6d6;
